ope046 save header

--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-6/ope04-6.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-6/ope04-6.component.html
@@ -103,7 +103,7 @@
         <div class="sixteen wide column">
           {{form.entrepreneur}}
           <br> กระดาษทำการตรวจสอบรายการวัตถุดิบที่ขอลดหย่อนภาษีที่ยื่นต่อกรมสรรพสามิต (ภส.05 - 02)
-          <br> เดือน {{form.dateFrom}} - {{form.dateTo}}
+          <br> เดือน {{form.dateFromDesc}} - {{form.dateToDesc}}
         </div>
       </div>
       <br>
