--- a/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/select-form.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/select-form.component.html
@@ -272,7 +272,11 @@
                                     <a href="javascript:;" routerLink="/ope04/6">
                                         กระดาษทำการตรวจสอบรายการวัตถุดิบที่ขอลดหย่อนภาษีที่ยื่นต่อกรมสรรพสามิต (ภส.05 -
                                         02) </a>
-                                </td>
+                                </td>                                
+                            </tr>
+                            <tr>
+                                <td>2</td>
+                                <td><a routerLink="/ope04/6-1" href="javascript:;">ผลการตรวจสอบรายการวัตถุดิบที่ขอลดหย่อนภาษีที่ยื่นต่อกรมสรรพสามิต (ภส.05 - 02)</a> </td>
                             </tr>
                             <!-- <tr>
                                 <td>
