--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-1/int07-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-1/int07-1.component.html
@@ -60,13 +60,13 @@
                 </thead>
             </table>
         </div>
-        <!-- <div class="ui center aligned grid">
+        <div class="ui center aligned grid">
         <div class="eight wide column">
             <button class="ui mini primary button width-100" (click)="onSave()">
         <i class="save  icon"></i>
         บันทึก
       </button>
         </div>
-    </div> -->
+    </div>
     </div>
 </div>
