--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-1/int08-2-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-1/int08-2-1.component.html
@@ -2,7 +2,7 @@
 
 <div class="ui grid">
 
-<!-- form 1 -->
+  <!-- form 1 -->
   <div class="sixteen wide column">
     <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
       <span>ประเมินความเสี่ยงระบบสารสนเทศฯ ของกรมสรรพสามิต</span>
@@ -18,8 +18,8 @@
             <div class="ui calendar" style="width:100%" id="year">
               <div class="ui input left icon">
                 <i class="calendar alter nate outline icon"></i>
-                <input type="calendar" id="budgetYear" placeholder="ปปปป" maxlength="4" name="budgetYear" [(ngModel)]="budgetYear"
-                  readonly="" autocomplete="off">
+                <input type="calendar" id="budgetYear" placeholder="ปปปป" maxlength="4" name="budgetYear" [(ngModel)]="budgetYear" readonly=""
+                  autocomplete="off">
               </div>
             </div>
           </div>
@@ -33,51 +33,51 @@
             </select>
           </div>
         </div>
-        </div>
-        <br>
-        <div class="ui center aligned grid">
-          <div class="sixteen wide column">
-            <button class="ui mini primary button" (click)="searchDataTable()">
-              <i class="search icon"></i>
-              ค้นหา
-            </button>
-            <button class="ui mini button" (click)="clearData()">
-              <i class="refresh icon"></i>
-              ล้างข้อมูล
-            </button>
-            <button class="ui mini green button" (click)="createBudgetYear()">
-              <i class="add icon"></i>
-              รายการใหม่
-            </button>
-          </div>
-        </div>
-
-<!-- table -->
-        <table id="dataTable" class="ui small celled table nowrap striped selectable" style="width: 100%;">
-          <thead>
-            <tr>
-              <th style="text-align: center !important">ลำดับที่</th>
-              <th style="text-align: center !important" class="four wide field ">ชื่อกระดาษทำการ</th>
-              <th style="text-align: center !important" class="four wide field ">ปัจจัยเสี่ยง</th>
-              <th style="text-align: center !important">ปีงบประมาณ</th>
-              <th style="text-align: center !important">วันที่สร้าง</th>
-              <th style="text-align: center !important">ผู้สร้าง</th>
-              <th style="text-align: center !important">จัดการ</th>
-            </tr>
-          </thead>
-        </table>
-        <div class="ui five column centered grid" *ngIf="riskFullYear">
-          <div class="column">
-            <button class="ui mini primary button" (click)="renderForm3()">
-              <i class="table icon"></i>
-              รายละเอียดปัจจัยเสี่ยงรวมประจำปี
-            </button>
-          </div>
+      </div>
+      <br>
+      <div class="ui center aligned grid">
+        <div class="sixteen wide column">
+          <button class="ui mini primary button" (click)="searchDataTable()">
+            <i class="search icon"></i>
+            ค้นหา
+          </button>
+          <button class="ui mini button" (click)="clearData()">
+            <i class="refresh icon"></i>
+            ล้างข้อมูล
+          </button>
+          <button class="ui mini green button" (click)="createBudgetYear()">
+            <i class="add icon"></i>
+            รายการใหม่
+          </button>
         </div>
       </div>
+
+      <!-- table -->
+      <table id="dataTable" class="ui small celled table nowrap striped selectable" style="width: 100%;">
+        <thead>
+          <tr>
+            <th style="text-align: center !important">ลำดับที่</th>
+            <th style="text-align: center !important" class="four wide field ">ชื่อกระดาษทำการ</th>
+            <th style="text-align: center !important" class="four wide field ">ปัจจัยเสี่ยง</th>
+            <th style="text-align: center !important">ปีงบประมาณ</th>
+            <th style="text-align: center !important">วันที่สร้าง</th>
+            <th style="text-align: center !important">ผู้สร้าง</th>
+            <th style="text-align: center !important">จัดการ</th>
+          </tr>
+        </thead>
+      </table>
+      <div class="ui centered aligned grid" *ngIf="riskFullYear">
+        <div class="sixteen wide column">
+          <button class="ui mini primary button" (click)="renderForm3()">
+            <i class="table icon"></i>
+            รายละเอียดปัจจัยเสี่ยงรวมประจำปี
+          </button>
+        </div>
+      </div>
+    </div>
     <br>
 
-<!-- form 2 -->
+    <!-- form 2 -->
     <div class="sixteen wide column" *ngIf="openForm1">
       <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
         <span>ประเมินความเสี่ยงระบบสารสนเทศฯ ของกรมสรรพสามิต</span>
@@ -106,7 +106,8 @@
               </div>
               <div class="one wide field ">
                 <label>
-                  {{con.condition == '<>' ? 'ระหว่าง' : con.condition == '>' ? 'มากกว่า':'น้อยกว่า'}}
+                  {{con.condition == '
+                  <>' ? 'ระหว่าง' : con.condition == '>' ? 'มากกว่า':'น้อยกว่า'}}
                 </label>
               </div>
               <div class="one wide field ">
@@ -177,7 +178,7 @@
       </div>
     </div>
 
-<!-- form 3 -->
+    <!-- form 3 -->
     <div class="sixteen wide column" *ngIf="openForm2">
       <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
         <span>ประเมินความเสี่ยงระบบสารสนเทศฯ ของกรมสรรพสามิต</span>
@@ -206,7 +207,8 @@
               </div>
               <div class="one wide field ">
                 <label>
-                  {{con.condition == '<>' ? 'ระหว่าง' : con.condition == '>' ? 'มากกว่า':'น้อยกว่า'}}
+                  {{con.condition == '
+                  <>' ? 'ระหว่าง' : con.condition == '>' ? 'มากกว่า':'น้อยกว่า'}}
                 </label>
               </div>
               <div class="one wide field ">
@@ -267,7 +269,7 @@
     </div>
 
 
-<!-- form 4 -->
+    <!-- form 4 -->
     <div class="sixteen wide column" *ngIf="openForm3">
       <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
         <span>ประเมินความเสี่ยงระบบสารสนเทศฯ ของกรมสรรพสามิต</span>
@@ -296,7 +298,8 @@
               </div>
               <div class="one wide field ">
                 <label>
-                  {{con.condition == '<>' ? 'ระหว่าง' : con.condition == '>' ? 'มากกว่า':'น้อยกว่า'}}
+                  {{con.condition == '
+                  <>' ? 'ระหว่าง' : con.condition == '>' ? 'มากกว่า':'น้อยกว่า'}}
                 </label>
               </div>
               <div class="one wide field ">
