--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-1/int08-2-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-1/int08-2-1.component.html
@@ -66,8 +66,8 @@
           </tr>
         </thead>
       </table>
-      <div class="ui centered aligned grid" *ngIf="riskFullYear">
-        <div class="sixteen wide column">
+      <div class="ui five column centered grid" *ngIf="riskFullYear">
+        <div class="column">
           <button class="ui mini primary button" (click)="renderForm3()">
             <i class="table icon"></i>
             รายละเอียดปัจจัยเสี่ยงรวมประจำปี
