--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-2/int08-3-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-2/int08-3-2.component.html
@@ -1,20 +1,22 @@
+<app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
+
 <div class="ui grid">
+
+  <!-- form 1 -->
   <div class="sixteen wide column">
     <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-      <span>กำหนดปัจจัยเสี่ยงประเมินความเสี่ยงโครงการยุทธศาสตร์ของกรมสรรพสามิต</span>
+      <span>กำหนดปัจจัยเสี่ยงประเมินความเสี่ยงสำนักงานสรรพสามิตภาคพื้นที่</span>
     </div>
     <div class="ui attached segment">
       <div class="ui form">
         <div class="inline fields">
           <div class="four wide field "></div>
           <div class="two wide field ">
-            <label>ปัจจัยเสี่ยง</label>
+            <label class="text-right full-width">ปัจจัยเสี่ยง</label>
           </div>
           <div class="four wide field ">
-            <input type="text" placeholder="ปัจจัยเสี่ยง" class="custom" name="riskHdrName" id="riskHdrName"
-              [(ngModel)]="riskHdrName">
+            <input type="text" placeholder="ปัจจัยเสี่ยง" class="custom" name="riskHdrName" id="riskHdrName" [(ngModel)]="riskHdrName">
           </div>
-
           <div class="four wide field ">
             <button class="ui mini green button" (click)="addRiskAssRiskWsHdr()">
               <i class="add icon"></i>
@@ -22,18 +24,17 @@
             </button>
           </div>
         </div>
+        <!-- table -->
         <table id="dataTable" class="ui small celled table striped selectable" style="width: 100%;">
           <thead>
             <tr>
-
-              <th>ที่</th>
-              <th>ชื่อกระดาษทำการ</th>
-
-              <th>ปีงบประมาณ</th>
-              <th>วันที่สร้าง</th>
-              <th>ผู้สร้าง</th>
-              <th>สถานะการใช้งาน</th>
-              <th></th>
+              <th style="text-align: center !important">ลำดับที่</th>
+              <th style="text-align: center !important">ชื่อกระดาษทำการ</th>
+              <th style="text-align: center !important">ปีงบประมาณ</th>
+              <th style="text-align: center !important">วันที่สร้าง</th>
+              <th style="text-align: center !important">ผู้สร้าง</th>
+              <th style="text-align: center !important">สถานะการใช้งาน</th>
+              <th style="text-align: center !important">จัดการ</th>
             </tr>
           </thead>
         </table>
@@ -58,7 +59,6 @@
               ยกเลิก
             </button>
           </div>
-
         </div>
       </div>
     </div>
@@ -67,13 +67,11 @@
     <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
       <span>กำหนดเงื่อนไขความเสี่ยง ปัจจัยเสี่ยงความถี่การเข้าตรวจสอบ</span>
     </div>
-
     <div class="ui attached segment">
       <div class="ui form">
         <condition [riskId]="budgetYear" [riskType]="'MAIN'" [page]="'int08-3-13'" (out)="closeConditionRL($event)"></condition>
       </div>
       <br />
-
     </div>
   </div>
 </div>
