--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-5/int08-3-5.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-5/int08-3-5.component.html
@@ -1,45 +1,44 @@
+<app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
+
 <div class="ui grid">
+
+  <!-- form 1 -->
   <div class="sixteen wide column">
     <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-      <span>รายละเอียดหัวกระดาษทำการ</span>
+      <span>รายละเอียดประเมินความเสี่ยงสำนักงานสรรพสามิตภาคพื้นที่</span>
     </div>
     <div class="ui attached segment">
       <div class="ui form">
-
         <div class="inline fields">
           <div class="two wide field "></div>
           <div class="two wide field">
-            <label>ปีงบประมาณ</label>
+            <label class="text-right full-width">ปีงบประมาณ</label>
           </div>
           <div class="ten wide field ">
-            <input type="text" placeholder="ปีงบประมาณ" class="custom" name="budgetYear" id="budgetYear" [(ngModel)]="budgetYear"
-              disabled="disabled" readonly>
+            <input type="text" placeholder="ปีงบประมาณ" class="custom" name="budgetYear" id="budgetYear" [(ngModel)]="budgetYear" disabled="disabled"
+              readonly>
           </div>
-
         </div>
       </div>
-
-      <div style="overflow-x: scroll;overflow-y: hidden;padding-bottom: 14px;">
-      <table id="dataTable" class="ui small celled table striped selectable" style="width: 140%;">
-        <thead id="trColumn">
-        </thead>
-        <tbody id="tbody">
-        </tbody>
-      </table>
+      <div style="overflow-y: hidden;padding-bottom: 14px;">
+        <table id="dataTable" class="ui small celled table striped selectable" style="width: 140%;">
+          <thead id="trColumn">
+          </thead>
+          <tbody id="tbody">
+          </tbody>
+        </table>
       </div>
-
       <BR />
       <div class="inline fields latest-inline">
         <div class="sixteen wide field">
           <div class="ui center aligned grid btn">
-
             <button class="ui mini primary button" (click)="modalConditionRL()">
               <i class="setting icon"></i>
               กำหนดเงื่อนไขความเสี่ยง
             </button>
             <button class="ui mini primary button" (click)="modalpercent()">
               <i class="setting icon"></i>
-              กำหนดค่าร้อยละ
+              กำหนดค่าร้อยละความเสี่ยง
             </button>
             <button class="ui mini yellow button" (click)="addRiskAssRiskWsHdr()">
               <i class="print icon"></i>
@@ -50,7 +49,6 @@
               ยกเลิก
             </button>
           </div>
-
         </div>
       </div>
       <BR />
@@ -58,23 +56,20 @@
     <BR />
     <div class="sixteen wide column" *ngIf="getConditionShow()">
       <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-        <span>กำหนดเงื่อนไขความเสี่ยง ปัจจัยเสี่ยงอื่นๆ</span>
+        <span>กำหนดเงื่อนไขความเสี่ยงสำนักงานสรรพสามิตภาคพื้นที่</span>
       </div>
-
       <div class="ui attached segment">
         <div class="ui form">
           <condition [riskId]="budgetYear" [riskType]="'ALL'" [page]="'int08-3-5'" (out)="closeConditionRL($event)"></condition>
         </div>
         <br />
-
       </div>
     </div>
     <BR />
     <div class="sixteen wide column" *ngIf="getpercent()">
       <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-        <span>กำหนดค่าน้ำหนัก (%) สำนักงานสรรพสามิตภาคพื้นที่</span>
+        <span>กำหนดค่าร้อยละความเสี่ยงสำนักงานสรรพสามิตภาคพื้นที่</span>
       </div>
-
       <div class="ui attached segment">
         <div class="ui form">
           <div class="inline fields" *ngFor="let risk of riskAssRiskWsHdrList; index as i;">
@@ -83,7 +78,7 @@
               <label>{{risk.riskHdrName}}</label>
             </div>
             <div class="two wide field">
-              <input type="number" placeholder="น้ำหนักของ{{risk.riskHdrName}}" class="custom" [(ngModel)]="risk.percent">&nbsp;&nbsp;%
+              <input type="number" placeholder="ค่าร้อยละของ{{risk.riskHdrName}}" class="custom" [(ngModel)]="risk.percent">&nbsp;&nbsp;%
             </div>
           </div>
         </div>
@@ -100,7 +95,6 @@
                 ยกเลิก
               </button>
             </div>
-
           </div>
         </div>
         <BR />
