--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-3/int08-2-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-3/int08-2-3.component.html
@@ -97,7 +97,7 @@
       <table id="dataTable" class="ui small celled table striped selectable" style="width: 140%;">
         <thead>
           <tr>
-            <th rowspan="2" style="text-align: center !important">ลำดับ</th>
+            <th rowspan="2" style="text-align: center !important">ลำดับที่</th>
             <th rowspan="2" style="text-align: center !important" class="four wide field ">ระบบสารสนเทศฯ ของกรมสรรพสามิต</th>
             <th rowspan="2" style="text-align: center !important">ม.ค.</th>
             <th rowspan="2" style="text-align: center !important">ก.พ.</th>
@@ -115,8 +115,8 @@
             <th colspan="2" style="text-align: center !important">ประเมินความเสี่ยง</th>
           </tr>
           <tr>
-            <th style="text-align: center !important; border-left: 1px solid rgba(34,36,38,.1) !important">RL</th>
-            <th style="text-align: center !important">แปลค่า</th>
+            <th style="text-align: center !important; border-left: 1px solid rgba(34,36,38,.1) !important">อัตราความเสี่ยง</th>
+            <th style="text-align: center !important">แปลค่าความเสี่ยง</th>
           </tr>
         </thead>
       </table>
