--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-9/int08-3-9.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-9/int08-3-9.component.html
@@ -1,12 +1,15 @@
+<app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
+
 <div class="ui grid">
+
+  <!-- form 1 -->
   <div class="sixteen wide column" *ngIf="!getConditionShow()">
     <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-      <span>รายละเอียดหัวกระดาษทำการ</span>
+      <span>รายละเอียดหัวกระดาษทำการ{{riskAssRiskWsHdr.riskHdrName}}</span>
     </div>
     <div class="ui attached segment">
       <div class="ui form">
         <div class="inline fields">
-          <div class="two wide field "></div>
           <div class="two wide field required">
             <label class="text-right full-width">ชื่อกระดาษทำการ</label>
           </div>
@@ -14,10 +17,7 @@
             <input type="text" placeholder="ชื่อกระดาษทำการ" maxlength="100" class="custom" name="riskHrdPaperName" id="riskHrdPaperName"
               [(ngModel)]="riskAssRiskWsHdr.riskHrdPaperName">
           </div>
-        </div>
-        <div class="inline fields">
-          <div class="two wide field "></div>
-          <div class="two wide field required">
+          <div class="one wide field required">
             <label class="text-right full-width">ปีงบประมาณ</label>
           </div>
           <div class="four wide field ">
@@ -26,195 +26,188 @@
           </div>
         </div>
         <div class="inline fields">
-          <div class="two wide field "></div>
           <div class="two wide field required">
             <label class="text-right full-width">ผู้จัดทำ : ชื่อ </label>
           </div>
           <div class="two wide field ">
             <div class="ui input">
               <select class="ui dropdown ai selection" style="width: 100%;" id="createUserTitle" [(ngModel)]="riskAssRiskWsHdr.createUserTitle">
-                <option value="00">เลือก</option>
+                <option value="00">กรุณาเลือก</option>
                 <option *ngFor="let data of titleList" value="{{data.lovId}}">{{data.subTypeDescription}}</option>
               </select>
             </div>
           </div>
-          <div class="two wide field ">
-            <input type="text" placeholder="ชื่อผู้จัดทำ" class="custom" name="createUserName" id="createUserName"
-              [(ngModel)]="riskAssRiskWsHdr.createUserName">
+          <div class="three wide field ">
+            <input type="text" placeholder="ชื่อผู้จัดทำ" class="custom" name="createUserName" id="createUserName" [(ngModel)]="riskAssRiskWsHdr.createUserName">
           </div>
           <div class="one wide field required">
             <label class="text-right full-width">นามสกุล</label>
           </div>
-          <div class="two wide field ">
-            <input type="text" placeholder="นามสกุล" class="custom" name="createLastName" id="createLastName"
-              [(ngModel)]="riskAssRiskWsHdr.createLastName">
+          <div class="three wide field ">
+            <input type="text" placeholder="นามสกุล" class="custom" name="createLastName" id="createLastName" [(ngModel)]="riskAssRiskWsHdr.createLastName">
           </div>
           <div class="one wide field required">
             <label class="text-right full-width">ตำแหน่ง</label>
           </div>
-          <div class="two wide field ">
-            <input type="text" placeholder="ตำแหน่ง" class="custom" name="createPosition" id="createPosition"
-              [(ngModel)]="riskAssRiskWsHdr.createPosition">
+          <div class="four wide field ">
+            <input type="text" placeholder="ตำแหน่ง" class="custom" name="createPosition" id="createPosition" [(ngModel)]="riskAssRiskWsHdr.createPosition">
           </div>
         </div>
         <div class="inline fields">
-          <div class="two wide field "></div>
           <div class="two wide field required">
             <label class="text-right full-width">ผู้ตรวจ : ชื่อ </label>
           </div>
           <div class="two wide field ">
             <div class="ui input">
               <select class="ui dropdown ai selection" style="width: 100%;" id="checkUserTitle" [(ngModel)]="riskAssRiskWsHdr.checkUserTitle">
-                <option value="00">เลือก</option>
+                <option value="00">กรุณาเลือก</option>
                 <option *ngFor="let data of titleList" value="{{data.lovId}}">{{data.subTypeDescription}}</option>
               </select>
             </div>
           </div>
-          <div class="two wide field ">
-            <input type="text" placeholder="ชื่อผู้ตรวจ" class="custom" name="checkUserName" id="checkUserName"
-              [(ngModel)]="riskAssRiskWsHdr.checkUserName">
+          <div class="three wide field ">
+            <input type="text" placeholder="ชื่อผู้ตรวจ" class="custom" name="checkUserName" id="checkUserName" [(ngModel)]="riskAssRiskWsHdr.checkUserName">
           </div>
           <div class="one wide field required">
             <label class="text-right full-width">นามสกุล</label>
           </div>
-          <div class="two wide field ">
+          <div class="three wide field ">
             <input type="text" placeholder="นามสกุล" class="custom" name="checkLastName" id="checkLastName" [(ngModel)]="riskAssRiskWsHdr.checkLastName">
           </div>
           <div class="one wide field required">
             <label class="text-right full-width">ตำแหน่ง</label>
           </div>
-          <div class="two wide field ">
-            <input type="text" placeholder="ตำแหน่ง" class="custom" name="checkPosition" id="checkPosition" disabled
-              [(ngModel)]="riskAssRiskWsHdr.checkPosition">
-          </div>
-        </div>
-
-
-        <div class="inline fields"></div>
-
-      </div>
-
-    </div>
-
-
-  </div>
-  <div class="sixteen wide column ">
-    <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-      <span>เพิ่มข้อมูลกระดาษทำการ</span>
-    </div>
-
-    <div class="ui attached segment">
-      <div class="ui form">
-
-        <div class="inline fields">
-          <div class="two wide field "></div>
-          <div class="two wide field">
-            <label>สรรพสามิตภาค</label>
-          </div>
           <div class="four wide field ">
-            <!-- <input type="text" placeholder="สรรพสามิตภาค" class="custom" name="exciseSetor" id="exciseSetor" [(ngModel)]="exciseSetor"> -->
-            <select class="ui search dropdown" id="exciseSetor" [(ngModel)]="exciseSetor" (change)="sectorChange()">
-              <option *ngFor="let sector of exciseSetorList; index as i;" value="{{sector.lovId}}">{{sector.value3}}</option>
-
-            </select>
+            <input type="text" placeholder="ตำแหน่ง" class="custom" name="checkPosition" id="checkPosition" disabled [(ngModel)]="riskAssRiskWsHdr.checkPosition">
           </div>
-          <div class="two wide field ">
-            <label>สรรพสามิตพื้นที่</label>
-          </div>
-          <div class="four wide field ">
-            <!-- <input type="text" placeholder="สรรพสามิตพื้นที่" class="custom" name="exciseArea" id="exciseArea" [(ngModel)]="exciseArea"> -->
-            <select class="ui search dropdown" id="exciseArea" [(ngModel)]="exciseArea" (change)="areaChange()">
-              <option *ngFor="let area of exciseAreaList; index as i;" value="{{area.lovId}}">{{area.subTypeDescription}}</option>
-            </select>
-          </div>
-        </div>
-
-        <div class="inline fields">
-          <div class="two wide field "></div>
-          <div class="two wide field">
-            <label>สรรพสามิตสาขา</label>
-          </div>
-          <div class="four wide field ">
-            <!-- <input type="text" placeholder="สรรพสามิตสาขา" class="custom" name="exciseBranch" id="exciseBranch" [(ngModel)]="exciseBranch"> -->
-            <select class="ui search dropdown" id="exciseBranch" [(ngModel)]="exciseBranch" (change)="branchChange()">
-              <option *ngFor="let branch of exciseBranchList; index as i;" value="{{branch.lovId}}">{{branch.subTypeDescription}}</option>
-
-            </select>
-          </div>
-          <div class="two wide field ">
-            <label>ค่าความเสี่ยง</label>
-          </div>
-          <div class="four wide field ">
-            <input type="text" placeholder="ค่าความเสี่ยง" class="custom" name="riskCost" id="riskCost" [(ngModel)]="riskCost">
-          </div>
-        </div>
-
-        <div class="inline fields"></div>
-        <div class="inline fields">
-          <div class="sixteen wide field ">
-            <div class="seven wide field "></div>
-            <button class="ui mini green button" (click)="addObjRiskDtl() ">
-              <i class="plus icon"></i>
-              เพิ่ม
-            </button>
-
-          </div>
-
-        </div>
-
-
-        <table id="dataTable" class="ui small celled table striped selectable" style="width: 100%">
-          <thead>
-            <tr>
-              <th rowspan="2" style="text-align: center !important">ลำดับ</th>
-              <th rowspan="2" style="text-align: center !important" class="four wide field ">หน่วยงาน</th>
-              <th rowspan="2" style="text-align: center !important">ค่าความเสี่ยง</th>
-              <th colspan="2" style="text-align: center !important">ประเมินความเสี่ยง</th>
-              <th rowspan="2" style="text-align: center !important"></th>
-            </tr>
-            <tr>
-              <th style="text-align: center !important; border-left: 1px solid rgba(34,36,38,.1) !important">RL</th>
-              <th style="text-align: center !important">แปลค่า</th>
-            </tr>
-          </thead>
-        </table>
-        <div class="inline fields "></div>
-        <div class="inline fields ">
-          <div class="sixteen wide field ">
-            <div class="six wide field "></div>
-            <button class="ui mini primary button" (click)="saveRiskAssRiskWsDtl()">
-              <i class="save icon"></i>
-              บันทึก
-            </button>
-            <button class="ui mini primary button" (click)="modalConditionRL()">
-              <i class="setting icon"></i>
-              กำหนดเงื่อนไขความเสี่ยง
-            </button>
-            <button class="ui mini yellow button" (click)="addRiskAssRiskWsHdr()">
-              <i class="print icon"></i>
-              ส่งออก
-            </button>
-            <button class="ui mini  button" (click)="cancelFlow()">
-              <i class="remove icon"></i>
-              ยกเลิก
-            </button>
-          </div>
-
         </div>
       </div>
     </div>
   </div>
-  <div class="sixteen wide column" *ngIf="getConditionShow()">
-    <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-      <span>กำหนดเงื่อนไขความเสี่ยง ปัจจัยเสี่ยงอื่นๆ</span>
-    </div>
+</div>
+<br>
+<!-- form 2 -->
+<div class="sixteen wide column ">
+  <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
+    <span>เพิ่มข้อมูล{{riskAssRiskWsHdr.riskHdrName}}</span>
+  </div>
+  <div class="ui attached segment">
+    <div class="ui form">
 
-    <div class="ui attached segment">
-      <div class="ui form">
-        <condition [riskId]="id" [riskType]="'OTHER'" [page]="'int08-3-4'" (out)="closeConditionRL($event)"></condition>
+      <div class="inline fields">
+        <div class="two wide field "></div>
+        <div class="two wide field">
+          <label class="text-right full-width">สำนักงานสรรพสามิตภาค</label>
+        </div>
+        <div class="four wide field ">
+          <!-- <input type="text" placeholder="สรรพสามิตภาค" class="custom" name="exciseSetor" id="exciseSetor" [(ngModel)]="exciseSetor"> -->
+          <select class="ui search dropdown" id="exciseSetor" [(ngModel)]="exciseSetor" (change)="sectorChange()">
+            <option *ngFor="let sector of exciseSetorList; index as i;" value="{{sector.lovId}}">{{sector.value3}}</option>
+          </select>
+        </div>
+        <div class="two wide field ">
+          <label class="text-right full-width">สำนักงานสรรพสามิตพื้นที่</label>
+        </div>
+        <div class="four wide field ">
+          <!-- <input type="text" placeholder="สรรพสามิตพื้นที่" class="custom" name="exciseArea" id="exciseArea" [(ngModel)]="exciseArea"> -->
+          <select class="ui search dropdown" id="exciseArea" [(ngModel)]="exciseArea" (change)="areaChange()">
+            <option *ngFor="let area of exciseAreaList; index as i;" value="{{area.lovId}}">{{area.subTypeDescription}}</option>
+          </select>
+        </div>
       </div>
-      <br />
+
+      <div class="inline fields">
+        <div class="two wide field "></div>
+        <div class="two wide field">
+          <label class="text-right full-width">สำนักงานสรรพสามิตสาขา</label>
+        </div>
+        <div class="four wide field ">
+          <!-- <input type="text" placeholder="สรรพสามิตสาขา" class="custom" name="exciseBranch" id="exciseBranch" [(ngModel)]="exciseBranch"> -->
+          <select class="ui search dropdown" id="exciseBranch" [(ngModel)]="exciseBranch" (change)="branchChange()">
+            <option *ngFor="let branch of exciseBranchList; index as i;" value="{{branch.lovId}}">{{branch.subTypeDescription}}</option>
+          </select>
+        </div>
+        <div class="two wide field required">
+          <label class="text-right full-width">ค่าความเสี่ยง</label>
+        </div>
+        <div class="four wide field ">
+          <input type="text" placeholder="ค่าความเสี่ยง" class="custom" name="riskCost" id="riskCost" [(ngModel)]="riskCost">
+        </div>
+      </div>
+
+      <div class="inline fields"></div>
+      <div class="inline fields">
+        <div class="sixteen wide field ">
+          <div class="seven wide field "></div>
+          <button class="ui mini green button" (click)="addObjRiskDtl() ">
+            <i class="plus icon"></i>
+            เพิ่ม
+          </button>
+        </div>
+      </div>
     </div>
   </div>
+</div>
+<br>
+<!-- form 3 -->
+<div class="sixteen wide column ">
+  <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
+    <span>รายละเอียดกระดาษทำการ{{riskAssRiskWsHdr.riskHdrName}}</span>
+  </div>
+  <div class="ui attached segment">
+    <div class="ui form">
 
+      <!-- table -->
+      <table id="dataTable" class="ui small celled table striped selectable" style="width: 100%">
+        <thead>
+          <tr>
+            <th rowspan="2" style="text-align: center !important">ลำดับที่</th>
+            <th rowspan="2" style="text-align: center !important" class="four wide field ">หน่วยงาน</th>
+            <th rowspan="2" style="text-align: center !important">ค่าความเสี่ยง</th>
+            <th colspan="2" style="text-align: center !important">ประเมินความเสี่ยง</th>
+            <th rowspan="2" style="text-align: center !important">ลบ</th>
+          </tr>
+          <tr>
+            <th style="text-align: center !important; border-left: 1px solid rgba(34,36,38,.1) !important">อัตราความเสี่ยง</th>
+            <th style="text-align: center !important">แปลค่าความเสี่ยง</th>
+          </tr>
+        </thead>
+      </table>
+      <div class="inline fields "></div>
+      <div class="inline fields ">
+        <div class="sixteen wide field ">
+          <div class="six wide field "></div>
+          <button class="ui mini primary button" (click)="saveRiskAssRiskWsDtl()">
+            <i class="save icon"></i>
+            บันทึก
+          </button>
+          <button class="ui mini primary button" (click)="modalConditionRL()">
+            <i class="setting icon"></i>
+            กำหนดเงื่อนไขความเสี่ยง
+          </button>
+          <button class="ui mini yellow button" (click)="addRiskAssRiskWsHdr()">
+            <i class="print icon"></i>
+            ส่งออก
+          </button>
+          <button class="ui mini  button" (click)="cancelFlow()">
+            <i class="remove icon"></i>
+            ยกเลิก
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<br>
+<!-- form condition -->
+<div class="sixteen wide column" *ngIf="getConditionShow()">
+  <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
+    <span>กำหนดเงื่อนไขความเสี่ยง{{riskAssRiskWsHdr.riskHdrName}}</span>
+  </div>
+  <div class="ui attached segment">
+    <div class="ui form">
+      <condition [riskId]="id" [riskType]="'OTHER'" [page]="'int08-3-4'" (out)="closeConditionRL($event)"></condition>
+    </div>
+    <br />
+  </div>
 </div>
